# AlgoLabra

./: README.md  pyproject.toml
documentation/: Viikkoraportti 4.md  Viikkoraportti1.md  Viikkoraportti2.md  Viikkoraportti3.md  Viikkoraportti5.md  maarittelydokumentti.md
src/eigenface/: matrix.py  pca.py  vector.py
