[project]
name = "eigenface"
version = "0.1.0"
description = "Aineopintojen harjoitustyö"
authors = [
    {name = "Roope",email = "roope.kaikkonen@helsinki.fi"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
